--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "homepage": "https://petrfact.github.io/frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
